@@ -1,3 +1,4 @@
+Removed freezing of the water.
 Added a production rate and associated calculations for steam so that fast forward will work.
 Made steam go away on reset.
 Fixed issues with z-order and steam.
